recursion.logo.lessons.recursion.logo.koch.HexaKoch.scala.error
HexaKoch:14: error: not found: value pentaKoch
    pentaKoch(levels-1,newLength)
    ^HexaKoch:17: error: not found: value pentaKoch
    pentaKoch(levels-1,newLength)
    ^HexaKoch:19: error: not found: value pentaKoch
    pentaKoch(levels-1,newLength)
    ^HexaKoch:21: error: not found: value pentaKoch
    pentaKoch(levels-1,newLength)
    ^HexaKoch:23: error: not found: value pentaKoch
    pentaKoch(levels-1,newLength)
    ^HexaKoch:25: error: not found: value pentaKoch
    pentaKoch(levels-1,newLength)
    ^HexaKoch:28: error: not found: value pentaKoch
    pentaKoch(levels-1,newLength)
    ^