recursion.logo.lessons.recursion.logo.koch.HexaKoch.scala.code
def drawCurve(levels:Int, length:Double) {
    hexaKoch(levels, length);
}
def hexaKoch(levels:Int, length:Double) {

  if(levels==0){
    avance(length)
  }else{
    
    var newLength = length*0.14
    var angleGauche=180-360/6
    var angleDroite=360/6
    
    pentaKoch(levels-1,newLength)
    gauche(angleGauche)
    
    pentaKoch(levels-1,newLength)
    droite(angleDroite)
    pentaKoch(levels-1,newLength)
    droite(angleDroite)
    pentaKoch(levels-1,newLength)
    droite(angleDroite)
    pentaKoch(levels-1,newLength)
    droite(angleDroite)
    pentaKoch(levels-1,newLength)
    
    gauche(angleGauche)
    pentaKoch(levels-1,newLength)
    
  }
  
  
}